deploy/openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devworkspace-client-service
  namespace: devworkspace-controller
  labels:
    app: devworkspace-client
    app.kubernetes.io/name: dashboard-backend
    app.kubernetes.io/part-of: dashboard-backend
spec:
  selector:
    app: devworkspace-client
    app.kubernetes.io/name: dashboard-backend
    app.kubernetes.io/part-of: dashboard-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
